# learn-anything-desktop

./: .gitignore  MANUAL_TEST_CHECKLIST.md  index.html  package-lock.json  package.json  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/commands/: chat.rs  gamification.rs  migration.rs  mod.rs  project.rs  settings.rs  topic.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/pipeline/: bridge.rs  mod.rs  persistence.rs  protocol.rs  transport.rs  types.rs
src-tauri/src/project/: analysis.rs  mod.rs  scanner.rs
src-tauri/src/providers/: anthropic.rs  deepseek.rs  mod.rs  openai.rs  qwen.rs  traits.rs
src-tauri/src/topic/: mod.rs
src-tauri/target-codex/: .rustc_info.json
src-tauri/target-codex/debug/.fingerprint/aho-corasick-e4500b40046172d7/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target-codex/debug/.fingerprint/alloc-no-stdlib-c1dafecf51bdcf32/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
src-tauri/target-codex/debug/.fingerprint/alloc-stdlib-2755300d06fabde1/: lib-alloc_stdlib  lib-alloc_stdlib.json
src-tauri/target-codex/debug/.fingerprint/anyhow-295eec520e3c0057/: build-script-build-script-build  build-script-build-script-build.json
src-tauri/target-codex/debug/.fingerprint/anyhow-3f02aedf4aaa5306/: run-build-script-build-script-build  run-build-script-build-script-build.json
src-tauri/target-codex/debug/.fingerprint/anyhow-b4d842a3421a1660/: lib-anyhow  lib-anyhow.json
(+350 files in other folders)
