[package]
name = "learn-anything-tool-desktop"
version = "0.1.0"
description = "AI-powered desktop learning app"
authors = ["lililihua-here"]
edition = "2021"

[lib]
name = "learn_anything_tool_desktop_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio-util = "0.7"
futures = "0.3"
bytes = "1"
walkdir = "2.5.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
